--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <title>Task List</title>
 </head>
-<body>
+<body class="blue">
+  <h2 style="text-align: center; color: #fff;">Task List</h2>
   <div class="container">
     <div class="row">
       <div class="col s12">
-        <div id="main" class="card">
+        <div id="main" class="card" style="max-width: 550px; margin: 6em auto;">
           <div class="card-content">
-            <span class="card-title">Task List</span>
+            <span class="card-title" style="color: #1e88e5 ; font-weight: 400;">Task List</span>
             <div class="row">
               <form id="task-form">
                 <div class="input-field col s12">
                   <input type="text" name="task" id="task">
                   <label for="task">New Task</label>
                 </div>
-                <input type="submit" value="Add Task" class="btn">
+                <input type="submit" value="Add Task" class="btn blue darken-1">
               </form>
             </div>
           </div>
@@ -33,7 +34,7 @@
               <label for="filter">Filter Tasks</label>
             </div>
             <ul class="collection"></ul>
-            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
+            <a href="#" class="clear-tasks btn blue darken-4">Clear Tasks</a>
           </div>
         </div>
       </div>
